week3-weekend-challenge

--- a/WEEK2-WEEKEND-CHALLENGE/index.html
+++ b/WEEK2-WEEKEND-CHALLENGE/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="results">
-        <p class="paragraph"> Paper covers Rock. You Win!!!</p>
+        <p class="paragraph"> Results </p>
 
     </div>
 
